Added basic message management
